<resources>
    <string name="appIcon">20 sided dice</string>
    <string name="assembleParty_title">Create new Party</string>
    <string name="title_party_rename">Rename Party</string>
    <string name="label_party_name">Party name</string>
    <string name="assembleParty_button_positive">create</string>
    <string name="button_create">create</string>
    <string name="error_party_name_blank">Party name cannot be empty</string>
    <string name="scanCode_title">Join via QR code</string>
    <string name="group_icon_description">Group icon</string>
    <string name="skill_icon_description">Icon with characteristic related to this skill</string>
    <string name="talent_icon_description">Generic talent icon</string>
    <string name="qr_code_description">QR code</string>
    <string name="title_party_activity">Parties</string>
    <string name="title_joinParty">Join party</string>
    <string name="label_skill_name">Skill Name</string>
    <string name="label_skill_description">Skill Description (Optional)</string>
    <string name="title_choose_compendium_skill">Choose Compendium skill…</string>
    <string name="button_add_non_compendium_skill">…or add non-Compendium skill</string>
    <string name="error_skill_name_empty">Skill name cannot be empty</string>
    <string name="error_compendium_skill_removed">Compendium skill was removed in the meantime</string>
    <string name="title_talent_add">Add Talent</string>
    <string name="label_description">Description (Optional)</string>
    <string name="error_talent_name_empty">Talent name cannot be empty</string>
    <string name="label_talent_taken">Times taken</string>
    <string name="error_compendium_talent_removed">Compendium talent was removed in the meantime</string>
    <string name="title_choose_compendium_talent">Choose Compendium talent…</string>
    <string name="button_add_non_compendium_talent">…or add non-Compendium talent</string>
    <string name="title_spell_add">Add Spell</string>
    <string name="message_spell_saved">Spell was saved</string>
    <string name="label_effect">Effect</string>
    <string name="label_spell_casting_number">Casting Number (CN)</string>
    <string name="label_duration">Duration</string>
    <string name="label_target">Target</string>
    <string name="label_range">Range</string>
    <string name="title_choose_compendium_spell">Choose Compendium spell…</string>
    <string name="button_add_non_compendium_spell">…or add non-Compendium spell</string>
    <string name="title_roll">Roll</string>
    <string name="title_skill_select">Select skill</string>
    <string name="title_skill_test">Perform skill test</string>
    <string name="title_test">%1$s Test</string>
    <string name="button_test_execute">Execute</string>
    <string name="button_test_reroll">Reroll</string>
    <string name="item_roll">Roll</string>
    <string name="item_roll_value">%1$d vs %2$s</string>
    <string name="error_needs_skill_advance">Character cannot test against advanced skill (s)he does not know.</string>
    <string name="item_success_level">SL</string>
    <string name="item_dramatic_result">Dramatic Result</string>
    <string name="item_fumble">Fumble</string>
    <string name="item_critical">Critical</string>
    <string name="label_skill">Skill</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_average">Average</string>
    <string name="difficulty_challenging">Challenging</string>
    <string name="difficulty_difficult">Difficult</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_very_hard">Very Hard</string>
    <string name="title_character_creation_info">Basic info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_scan_prompt">Scan the code provided by your GM</string>
    <string name="join_party_dialog_party_name">You have been invited to </string>
    <string name="join_party_dialog_prompt">Do you want to continue?</string>
    <string name="button_continue">Continue</string>
    <string name="error_already_party_member">You are already member of this party</string>
    <string name="error_invalid_invitation">Invitation token is not valid</string>
    <string name="error_unkown">Unknown error occurred</string>
    <string name="title_invite_players">Invite players…</string>
    <string name="invitation_code_description">Players can scan this QR code in their apps</string>
    <string name="title_characterCreation">Describe your character…</string>
    <string name="title_character_stats">Attributes</string>
    <string name="title_character_conditions">Conditions</string>
    <string name="title_character_trappings">Trappings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_description">Description</string>
    <string name="label_name">Name</string>
    <string name="label_race">Race</string>
    <string name="label_career">Career</string>
    <string name="label_social_class">Class</string>
    <string name="label_toughness_bonus">TB</string>
    <string name="label_strength_bonus">SB</string>
    <string name="button_edit">Edit</string>
    <string name="subtitle_edit_character">Edit character</string>
    <string name="no_parties_prompt">No parties</string>
    <string name="no_parties_sub_prompt">Create your first party\n or join the existing one.</string>
    <string name="no_spells">No spells</string>
    <string name="no_spells_sub_text">You don\'t know any spells.</string>
    <string name="no_skills">Character doesn\'t have any skills.</string>
    <string name="attribution_icons">Icons made by Delapouite and Lorc.\nAvailable on https://game-icons.net</string>
    <string name="attribution_dice_roll_sound">\"Shake And Roll Dice\" sound was made by Mike Koenig (soundbible.com) and used via CC BY 3.0 license</string>
    <string name="character_icon_description">Character icon</string>
    <string name="no_characters_in_party_prompt">No player has joined this party yet.</string>
    <string name="button_invite">Invite</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_select_time">Select Time</string>
    <string name="title_encounters">Encounters</string>
    <string name="title_party_settings">Party Settings</string>
    <string name="party_section_general">General</string>
    <string name="initiative_rules">Initiative rules</string>
    <string name="initiative_initiative_characteristic">Initiative, then Agility</string>
    <string name="initiative_initiative_test">Opposed Initiative Test</string>
    <string name="initiative_initiative_plus_1d10">Initiative + 1d10</string>
    <string name="initiative_bonuses_plus_1d10">IB + AgiB + 1d10</string>
    <string name="title_encounter_create">Create Encounter</string>
    <string name="message_encounter_saved">Encounter was saved</string>
    <string name="no_encounters_prompt">No encounters</string>
    <string name="no_encounters_sub_prompt">Add first encounter for your party.</string>
    <string name="encounter_icon">Encounter icon</string>
    <string name="no_npcs_prompt">There are no NPCs yet. Add first one.</string>
    <string name="title_npc_add">New NPC</string>
    <string name="title_npc">NPC</string>
    <string name="title_npc_edit">Edit NPC</string>
    <string name="button_edit_info">Edit info</string>
    <string name="error_value_is_0">Value cannot be 0</string>
    <string name="error_value_not_greater_or_equal_to">Value must be greater or equal to %1$d</string>
    <string name="error_value_not_greater_than_0">Value must be greater than 0</string>
    <string name="error_cannot_be_empty">Cannot be empty!</string>
    <string name="error_value_over_100">Cannot be higher than 100</string>
    <string name="error_value_over_max">Cannot be higher than maximum value</string>
    <string name="error_party_creation_no_connection">You need to be connected to internet to create parties</string>
    <string name="error_party_update_no_connection">You need to be connected to internet to update party</string>
    <string name="title_character_skills">Skills</string>
    <string name="title_character_talents">Talents</string>
    <string name="title_character_religion">Religion</string>
    <string name="title_character_spells">Spells</string>
    <string name="title_character_characteristics">Characteristics</string>
    <string name="title_addSkill">Add skill</string>
    <string name="label_skill_characteristic">Characteristic</string>
    <string name="label_skill_advances">Advances</string>
    <string name="label_skill_advanced">Advanced</string>
    <string name="skill_test_number_shortcut">TN</string>
    <string name="remove">Remove</string>
    <string name="error_name_blank">Name cannot be blank.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="xp_points">XP</string>
    <string name="xp_points_spent">%1$d spent</string>
    <string name="xp_long">Experience points</string>
    <string name="label_xp_current">Current XP</string>
    <string name="label_xp_spent">Previously spent XP</string>
    <string name="title_party_ambitions">Party ambitions</string>
    <string name="title_character_ambitions">Character ambitions</string>
    <string name="label_ambition_short_term">Short-term</string>
    <string name="label_ambition_long_term">Long-term</string>
    <string name="note_ambition_not_filled">Ambition not filled</string>
    <string name="spell_casting_number_shortcut">CN</string>
    <string name="title_character_creation_points">Point pools</string>
    <string name="label_base">Base</string>
    <string name="label_advances">Advances</string>
    <string name="description_character_point_down">Decrease points amount by 1</string>
    <string name="description_character_point_up">Increase points amount by 1</string>
    <string name="report_issue">Report an Issue</string>
    <string name="issue_email_address">frantisekmasa1+wfrp-master@gmail.com</string>
    <string name="issue_email_subject">Issue Report for WFRP Master</string>
    <string name="rate_app">Rate the App</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_psychology_input">Psychology (Optional)</string>
    <string name="label_motivation_input">Motivation (Optional)</string>
    <string name="title_characters">Characters</string>
    <string name="gold_coins_shortcut">gc</string>
    <string name="silver_shillings_shortcut">s</string>
    <string name="brass_pennies_shortcut">p</string>
    <string name="inventory_item_quantity">Quantity</string>
    <string name="label_crowns">Crowns</string>
    <string name="label_shillings">Shillings</string>
    <string name="label_pennies">Pennies</string>
    <string name="title_transaction_end">money</string>
    <string name="not_enough_money">Character does not have enough money</string>
    <string name="label_wounds">Wounds</string>
    <string name="armor_shield">Shield</string>
    <string name="armor_left_leg">Left Leg</string>
    <string name="armor_right_leg">Right Leg</string>
    <string name="armor_left_arm">Left Arm</string>
    <string name="armor_right_arm">Right Arm</string>
    <string name="armor_body">Body</string>
    <string name="armor_head">Head</string>
    <string name="race_dwarf">Dwarf</string>
    <string name="race_high_elf">High Elf</string>
    <string name="race_wood_elf">Wood Elf</string>
    <string name="race_halfling">Halfling</string>
    <string name="race_human">Human</string>
    <string name="label_fate_points">Fate</string>
    <string name="label_resilience">Resilience</string>
</resources>