<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.characterCreation.CharacterInfoFormFragment">

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/nameInput"
        app:inputLabel="@string/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_race"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonRaceHuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/race_human" />

        <RadioButton
            android:id="@+id/radioButtonRaceHalfling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_halfling" />

        <RadioButton
            android:id="@+id/radioButtonRaceElf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_high_elf" />

        <RadioButton
            android:id="@+id/radioButtonRaceDwarf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_dwarf" />

        <RadioButton
            android:id="@+id/radioButtonRaceGnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_wood_elf" />
    </RadioGroup>


    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/socialClassInput"
        android:layout_marginTop="8dp"
        app:inputLabel="@string/label_social_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/careerInput"
        android:layout_marginTop="8dp"
        app:inputLabel="@string/label_career"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/psychologyInput"
        android:layout_marginTop="8dp"
        app:inputLabel="@string/label_psychology_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/motivationInput"
        android:layout_marginTop="12dp"
        app:inputLabel="@string/label_motivation_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>