<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_info"
            android:id="@+id/nav_about"
            android:orderInCategory="100"
            android:title="@string/about" />

        <item
            android:checkable="false"
            android:icon="@drawable/ic_review"
            android:onClick="rateApp"
            android:title="@string/rate_app" />

        <item
            android:checkable="false"
            android:icon="@drawable/ic_policy"
            android:onClick="openPrivacyPolicy"
            android:title="@string/label_privacy_policy" />

        <item
            android:checkable="false"
            android:icon="@drawable/ic_bug_report"
            android:onClick="reportIssue"
            android:title="@string/report_issue" />
    </group>
</menu>