<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialogPadding"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:constraint_referenced_ids="
                headInput,
                bodyInput,
                leftArmInput,
                rightArmInput,
                leftLegInput,
                rightLegInput,
                shieldInput"
            app:flow_maxElementsWrap="2"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/headInput"
            android:inputType="number"
            android:maxLength="2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_head" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/bodyInput"
            android:layout_width="100dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_body" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/leftArmInput"
            android:layout_width="100dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_left_arm" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/rightArmInput"
            android:layout_width="100dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_right_arm" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/shieldInput"
            android:layout_width="100dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_shield" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/leftLegInput"
            android:inputType="number"
            android:maxLength="2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_left_leg" />

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/rightLegInput"
            android:layout_width="100dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            app:inputLabel="@string/armor_right_leg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
