<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding">

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/talentNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:inputLabel="@string/label_name" />

    <cz.muni.fi.rpg.ui.views.TextInput
        android:layout_marginTop="16dp"
        android:id="@+id/talentDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:inputLabel="@string/label_description" />

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/talentTakenInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:maxLength="3"
        app:inputLabel="@string/label_talent_taken" />
</LinearLayout>