<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <Spinner
        android:id="@+id/directionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_transaction_end"
        app:layout_constraintBottom_toBottomOf="@id/directionSpinner"
        app:layout_constraintStart_toEndOf="@id/directionSpinner"
        app:layout_constraintTop_toTopOf="@id/directionSpinner" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="crownsInput,shillingsInput,penniesInput"
        app:flow_horizontalGap="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directionSpinner" />

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/crownsInput"
        android:layout_width="0dp"
        android:inputType="number"
        android:maxLength="6"
        android:layout_height="wrap_content"
        app:inputLabel="@string/label_crowns" />

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/shillingsInput"
        android:layout_width="0dp"
        android:inputType="number"
        android:maxLength="6"
        android:layout_height="wrap_content"
        app:inputLabel="@string/label_shillings" />

    <cz.muni.fi.rpg.ui.views.TextInput
        android:id="@+id/penniesInput"
        android:inputType="number"
        android:maxLength="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:inputLabel="@string/label_pennies" />


    <TextView
        android:id="@+id/notEnoughMoneyError"
        android:text="@string/not_enough_money"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:textColor="@color/colorDanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>