<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="@dimen/dialogPadding"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <cz.muni.fi.rpg.ui.views.TextInput
            app:inputLabel="@string/label_name"
            android:id="@+id/nameInput"
            android:maxLines="1"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/quantityInput"
            app:inputLabel="@string/inventory_item_quantity"
            android:maxLines="1"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <cz.muni.fi.rpg.ui.views.TextInput
            android:id="@+id/descriptionInput"
            app:inputLabel="@string/label_description"
            android:minLines="3"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>