<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundUnderCard"
    tools:context=".ui.gameMaster.GameMasterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/long_ui_bottom_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/users"
            style="@style/CardContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_characters" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/characterListRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/noCharactersIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_group"
                    android:tint="@color/colorEmptyState"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/noCharactersText"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_characters_in_party_prompt"
                    android:textColor="@color/colorEmptyState"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/inviteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:enabled="false"
                    android:text="@string/button_invite" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <cz.muni.fi.rpg.ui.views.AmbitionsCard
            android:id="@+id/ambitionsCard"
            style="@style/CardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:title="@string/title_party_ambitions" />
    </LinearLayout>
</ScrollView>
