<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp">

    <ImageView
        android:layout_width="@dimen/coin_drawable_width"
        android:src="@drawable/ic_coins"
        app:tint="@color/colorGold"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/crowns"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginStart="4dp"
        android:text="@string/gold_coins_shortcut"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="@dimen/coin_drawable_width"
        android:src="@drawable/ic_coins"
        app:tint="@color/colorSilver"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/shillings"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginStart="4dp"
        android:text="@string/silver_shillings_shortcut"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="@dimen/coin_drawable_width"
        android:src="@drawable/ic_coins"
        app:tint="@color/colorBrass"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/pennies"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginStart="4dp"
        android:text="@string/brass_pennies_shortcut"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content" />
</LinearLayout>
